# agentic-rag-arxiv

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  LICENSE  README.md  SOURCES.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: eval-gate.yml
eval/: README.md  golden_set.jsonl  thresholds.json
eval/results/: 20260604-161000.json  20260604-161000.md  20260604-193620.json  20260604-193620.md  20260605-103605.json  20260605-103605.md  20260605-113236.json  20260605-113236.md
scripts/: agent_ask.py  ask.py  bench_routing_cache.py  check_registry_coverage.py  eval_gate.py  eval_run.py  export_index.py  fetch_corpus.py  inspect_index.py  load_index_fixture.py  search.py  trace_coverage.py
src/agentic_rag/: __init__.py
src/agentic_rag/agent/: __init__.py  config.py  corpus.py  graph.py  nodes.py  prompts.py  state.py
src/agentic_rag/answer/: __init__.py  baseline.py  prompt.py  schemas.py  validate.py
src/agentic_rag/api/: __init__.py  app.py  schemas.py  service.py
src/agentic_rag/eval/: __init__.py  dataset.py  fixture.py  gate.py  judge.py  ragas_metrics.py  report.py  retrieval_metrics.py  runner.py  systems.py
src/agentic_rag/guardrails/: __init__.py  config.py  guard.py  injection.py  models.py  output.py
src/agentic_rag/ingest/: __init__.py  chunk.py  cli.py  config.py  corpus.py  embed.py  index.py  parse.py  pipeline.py
src/agentic_rag/llm/: __init__.py  cache.py  client.py  config.py  metering.py
src/agentic_rag/observability/: __init__.py  config.py  tracer.py
src/agentic_rag/retrieve/: __init__.py  bm25.py  config.py  dense.py  fusion.py  models.py  rerank.py  retriever.py
tests/: test_agent_routing.py  test_answer_validate.py  test_api.py  test_baseline.py  test_bm25.py  test_chunk.py  test_corpus_and_parse.py  test_eval.py  test_eval_gate.py  test_fusion.py  test_guardrails.py  test_llm_routing.py  test_metadata.py  test_metering.py  test_observability.py  test_prompt.py  test_retriever.py
ui/: streamlit_app.py
