[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-arxiv"
version = "0.1.0"
description = "Ingestion pipeline for an agentic RAG system over arXiv transformer-lineage papers"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24,<2.0",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
# CLI entry point: `rag-ingest --help` after `pip install -e .`
rag-ingest = "agentic_rag.ingest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
