[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-arxiv"
version = "0.1.0"
description = "Ingestion pipeline for an agentic RAG system over arXiv transformer-lineage papers"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24,<2.0",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.9",
    "rank-bm25>=0.2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.scripts]
# CLI entry point: `rag-ingest --help` after `uv sync` (or `pip install -e .`)
rag-ingest = "agentic_rag.ingest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade, B bugbear,
# C4 comprehensions, SIM simplify. Pragmatic, not maximalist.
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
# Line length is enforced by the formatter; don't also fail lint on long
# comments/strings (e.g. long doc comments and URLs).
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
